# python-django-blog

./: Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py
hexlet_django_blog/article/: views.py
